# restic-dl

./: .dockerignore  .gitignore  .justfile  Cargo.toml  Dockerfile  package.json  tailwind.config.js
.github/workflows/: build.yaml
src/: args.rs  error.rs  filters.rs  helper.rs  highlight.rs  htmx.rs  http.rs  main.rs  nav.rs  navigation.rs  restic.rs
src/args/: server.rs
src/browse/: directory.rs  files.rs  mod.rs  preview.rs  snapshots.rs  tree.rs
src/browse/directory/: fragment.rs  location.rs  page.rs
src/download/: mod.rs  page.rs  param.rs  response.rs
src/download/page/: link.rs  progress.rs
src/download/response/: download.rs  progress.rs  restore.rs
src/http/: extract.rs  middleware.rs  navigation.rs  partial.rs  route.rs
src/http/extract/: entry_path.rs  htmx.rs  query.rs  repository.rs  snapshot.rs
src/http/middleware/: repository.rs  restore.rs  session.rs
src/http/middleware/repository/: cookie.rs  unlock.rs
src/http/middleware/session/: cache.rs
src/http/route/: assets.rs  browse.rs  restore.rs
src/http/route/browse/: directories.rs  directory.rs  repositories.rs  snapshots.rs
src/http/route/browse/directories/: fragment.rs  page.rs
src/http/route/browse/directory/: fragment.rs  page.rs
src/http/route/restore/: create.rs  download.rs  progress.rs  share.rs
src/http/route/restore/progress/: fragment.rs  page.rs  sse.rs
src/navigation/: breadcrumbs.rs
src/repo/: cache.rs  mod.rs
src/repo/extract/: entry_path.rs  mod.rs  repository.rs  snapshot.rs
src/repo/restic/: mod.rs  repository.rs  restore.rs  snapshot.rs
src/repo/restic/restore/: content.rs  plan.rs
src/restic/: repository.rs  restore.rs
src/restic/repository/: cache.rs  entry.rs  snapshot.rs
src/restic/restore/: content.rs  id.rs  manager.rs  plan.rs  progress.rs
src/restic/restore/destination/: archive.rs  file.rs
src/restic/restore/manager/: fetch.rs  purge.rs  restore.rs
src/restic/restore/progress/: count.rs  update.rs  writer.rs
src/restore/: hash.rs  id.rs  manager.rs  mod.rs  progress.rs
src/restore/destination/: archive.rs  file.rs  mod.rs
src/restore/manager/: fetch.rs  purge.rs  restore.rs
systemd/: restic-dl.service  restic-dl.socket
templates/: base.html  breadcrumbs.html  hello.html  input.css  navigation.html
templates/breadcrumb/: directory.html  repository.html  snapshot.html
templates/browse/: login.html  snapshots.html  unlock.html
templates/browse/directory/: page.html
templates/browse/directory/partial/: buttons.html  table.html
templates/directory/: fragment.html  page.html
templates/directory/partial/: buttons.html  location.html  table.html
templates/frag/: nav.html  preview.html  todonav.html
templates/frag/tree/: directory.html  file.html  root.html
templates/link/: fragment.html  page.html  partial.html
templates/page/browse/: files.html  snapshots.html
templates/progress/: data.html  page.html  stuff.html
templates/share/: fragment.html  page.html  partial.html
