[package]
name = "restic-dl"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.13.0", default-features = false, features = ["with-axum"], git = "https://github.com/djc/askama" }
askama_axum = { version = "0.5.0", git = "https://github.com/djc/askama" }
axum = { version = "0.7.5", features = ["macros"] }
blake3 = "1.5.1"
rustic_backend = { path = "../rustic_core/crates/backend", version = "0.1.1", default-features = false }
rustic_core = { path = "../rustic_core/crates/core", version = "0.2.0" }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
syntect = { version = "5.2.0", default-features = false, features = ["html", "parsing"] }
syntect-assets = "0.23.6"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "compression-br", "compression-gzip", "normalize-path"] }

[profile.dev.package."*"]
opt-level = 3
