[package]
name = "restic-dl"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", default-features = false, features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.5", features = ["http2"] }
axum-extra = { version = "0.9.3", features = ["cookie"] }
blake3 = { version = "1.5.1", features = ["serde"] }
chrono = { version = "0.4.38", default-features = false, features = ["std", "now", "serde"] }
fast_qr = { version = "0.12.5", features = ["svg"] }
form_urlencoded = "1.2.1"
futures = { version = "0.3.30", default-features = false, features = ["std"] }
futures-time = "3.0.0"
rand = "0.8.5"
rustic_backend = { path = "../rustic_core/crates/backend", version = "0.1.1", default-features = false }
rustic_core = { path = "../rustic_core/crates/core", version = "0.2.0" }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
syntect = { version = "5.2.0", default-features = false, features = ["html", "parsing"] }
syntect-assets = "0.23.6"
tempfile = "3.10.1"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["io"] }
tower-http = { version = "0.5.2", features = ["fs", "compression-br", "compression-gzip", "normalize-path"] }
zip = { version = "2.0.0", default-features = false, features = ["zstd", "deflate-flate2", "deflate"] }

[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = true
